Limpieza de datos concluída.

--- a/source/Titanic_analysis.Rmd
+++ b/source/Titanic_analysis.Rmd
@@ -5,7 +5,7 @@ date: "Mayo 2021"
 output: 
     html_document:
         highlight: default
-        number_sections: yes
+        number_sections: no
         toc: yes
         toc_depth: 3
         df_print: kable
@@ -21,7 +21,7 @@ library(knitr)
 opts_chunk$set(echo = TRUE, fig.align = "center", tidy = TRUE)
 ```
 
-# Descripción del dataset
+# 1. Descripción del dataset
 
 El conjunto de datos que estudiaremos es el [*Titanic dataset*](https://www.kaggle.com/c/titanic/data). 
 El objetivo primordial de este *dataset* es la creación de un modelo que prediga que pasajeros sobrevivieron al hundimiento del Titanic.
@@ -31,11 +31,24 @@ la variedad en las variables y la cantidad de estudios y discusiones sobre él q
 incluso en la propia [página de discusiones de la competición en Kaggle](https://www.kaggle.com/c/titanic/discussion). 
 
 El conjunto de datos "completo" tal y como se incluye en [Kaggle](https://www.kaggle.com) viene ya dividido en dos subconjuntos: 
-uno de entrenamiento y otro de evaluación.
-Podemos utilizar ambos en el periodo de limpieza y evaluación,
-pero sólo el primero puede ser analizado, 
-dado que al segundo le falta la columna `Survived` que se debe predecir. 
+uno de entrenamiento, denominado "train.csv" y otro de evaluación, denominado "test.csv".
+Ambos conjuntos deben pasar por los pasos de preprocesado, 
+pero sólo podremos utilizar el primer conjunto para análisis,
+dado que al segundo le falta la columna `Survived` que se debe predecir.
 Esto se debe a que sobre este segundo conjunto está pensado para que efectuemos nuestras predicciones sobre él y subamos estas predicciones a la [competición](https://www.kaggle.com/c/titanic/overview) a la que pertenece.
+
+La hoja de ruta es la siguiente:
+
+a. Limpiaremos ambos conjuntos de datos de manera conjunta, 
+pero distinguiendo el subconjunto a la hora de hacer inputaciones. 
+
+b. Analizaremos el conjunto de entrenamiento. 
+
+c. Crearemos también un modelo de clasificación con el conjunto de entrenamiento, 
+y usaremos la validación cruzada para evaluar su rendimiento. 
+
+d. Evaluaremos también el modelo creado sobre el conjunto de test, 
+utilizando para ello la plataforma [Kaggle](https://www.kaggle.com).
 
 El conjunto contiene 10 variables además de la variable respuesta `survived`, 
 con 891 registros en el conjunto de entrenamiento y 418 registros en el conjunto de evaluación.
@@ -55,7 +68,7 @@ A continuación mostramos el diccionario de datos:
 |cabin| Código alfanumérico de cabina. |
 |embarked| Puerto de embarque. | C = Cherbourg, Q = Queenstown, S&nbsp;=&nbsp;Southampton
 
-# Integración y selección de los datos de interés a analizar.
+# 2. Integración y selección de los datos de interés a analizar.
 
 Como primer paso de la integración unimos ambos conjuntos de datos 
 entrenamiento y evaluación en uno sólo, 
@@ -82,10 +95,11 @@ Respecto a la selección de datos:
 
 + Como no nos interesa restringirnos a un grupo en particular mantendremos en este punto todos los registros. 
 
-+ Nos quedaremos también todas las variables, dado que todas parece que puedan estar relacionadas con el objetivo, y eliminaremos las que no nos sean útiles más adelante
-en un proceso de selección de variables.
++ Nos quedaremos también todas las variables, 
+dado que todas parece que puedan estar relacionadas con el objetivo, 
+y eliminaremos las que no nos sean útiles más adelante en un proceso de selección de variables.
 
-# Limpieza de datos
+# 3. Limpieza de datos
 
 ## Busqueda de valores nulos
 
@@ -138,7 +152,7 @@ summary(Filter(is.numeric, df))
 Podemos ver que sólo a un registro le falta información de `Fare`. 
 Por otra parte también vemos que 263 registros no tienen la edad informada.
 Esto sí que es un posible problema que necesitaremos subsanar, 
-dado que una posible politica de supervivencia prioritaria aplicada durante el hundimiento del Titanic podría ser "Mujeres y niños primero".
+dado que una posible política de supervivencia prioritaria aplicada durante el hundimiento del Titanic podría ser "Mujeres y niños primero".
 Del resto de variables sólo la cantidad de ceros en `Parch` nos hace pensar que puedan ser valores desconocidos, 
 pero teniendo en cuenta el significado de la variable parece normal.
 
@@ -256,14 +270,19 @@ Recapitulando tenemos que tratar
 
 + 2 valores perdidos en la variable `Embarked`. 
 
-El caso de la variable `Cabin` es el más claro: 
+Es importante notar que todas las medidas que tomemos en este apartado para tratar los valores perdidos deberán tener en cuenta a que subconjunto pertenece cada registro.
+El motivo es que de lo contrario podríamos estar filtrando información sobre datos de evaluación al modelo,
+si por ejemplo utilizasemos el conjunto completo para inputar un valor en un registro de entrenamiento.
+
+### Variable `Cabin`
+
+El caso de la variable `Cabin` es el más claro:
 tanto la variedad de la variable como la cantidad de registros perdidos (casi 3/4)
-nos obligan a eliminarla:
+nos obligan a eliminarla de ambos subconjuntos:
 
 ```{r}
 df = df[, names(df) != 'Cabin']
 ```
-
 
 Hecho esto resulta interesante estudiar las posibles combinaciones de valores desconocidos, 
 dado que esto dificultara las posibles inputaciones que queramos hacer.
@@ -281,19 +300,21 @@ Observemos los registros:
 df[is.na(df['Embarked']),]
 ```
 
-Vemos que compartían ticket, pero nadie más lo compartia con ellas:
+Vemos que ambos pertenecen al subconjunto de entrenamiento (dado que tienen la variable `Survived` informada).
+También vemos que compartían ticket, pero nadie más lo compartia con ellas:
 
 ```{r}
 df[df['Ticket'] == 113572,]
 ```
 
-Como no tenían familia a bordo tampoco parece que utilizar sus apellidos vaya a ser una buena opción, por lo que decidimos descartar ambos registros:
+Como no tenían familia a bordo tampoco parece que utilizar sus apellidos vaya a ser una buena opción, 
+por lo que decidimos descartar ambos registros:
 
 ```{r}
 df = df[-c(62, 830),]
 ```
 
-### Variable `Fare`. ¡¡¡ESTE ES DE TEST!!!
+### Variable `Fare`.
 
 Observemos el registro:
 
@@ -301,21 +322,29 @@ Observemos el registro:
 df[is.na(df['Fare']),]
 ```
 
-Como el registro pertenece a la tercera clase y no tiene familia embarcada le inputamos la media de tarifas de este subgrupo:
+Notamos que en este caso el registro correspondende al subconjunto de evaluación.
+Como el registro pertenece a la tercera clase y no tiene familia embarcada le inputamos la media de tarifas de este subgrupo dentro del subconjunto de evaluación:
 
 ```{r}
 df[is.na(df['Fare']),'Fare']= 
-  mean(df[df['Pclass'] == 3 & df['SibSp'] == 0 & df['Parch'] == 0,'Fare'], na.rm = TRUE)
+  mean(df[df['Pclass'] == 3 & df['SibSp'] == 0 & df['Parch'] == 0 & is.na(df['Survived']), 'Fare'], na.rm = TRUE)
 ```
 
 ### Variable `Age`
 
 Finalmente llegamos a la variable más complicada, `Age`. 
 El número de registros sin edad informada hace inviable eliminarlos todos, 
-por lo que lo más sensato parece tratar de inputarles valores. 
+por lo que lo más sensato parece tratar de inputarles valores.
+Utilizaremos para ello una estrategia parecida a la utilizada en [este tutorial de Kaggle](https://www.kaggle.com/allohvk/titanic-missing-age-imputation-tutorial-advanced), 
+inputando los valores de `Age` estratificando los registros según su titulo (aún por obtener).
+Deberemos tener en cuenta también que los registros sin edad informada pertenecen a ambos subconjuntos, 
+con 177 registros de entrenamiento y 86 de evaluación:
 
-Para ello utilizaremos tanto la clase (guardada en `Pclass`) como el ''Título'', 
-que extraemos del nombre usando *regex* y convertimos a factor:
+```{r}
+table(is.na(df[is.na(df['Age']),'Survived']))
+```
+
+El "Título" lo extraemos del nombre usando expresiones regulares (*RegEx*), y convertimos a factor:
 
 ```{r}
 df[, 'Title'] = sapply(df[, 'Name'], function(x){trimws(strsplit(x, "[,.] ")[[1]][2])})
@@ -324,15 +353,91 @@ df[, 'Title'] = factor(df[, 'Title'])
 
 El código que tenemos encima divide el nombre de cada registro en 3, 
 dividiendo tanto por coma como por punto y elimina los espacios a ambos extremos.
-La distribución de títulos en los registros con edad informada y aquellos en los que no es como sigue:
+La distribución de títulos en los registros con edad informada y aquellos en los que no es como sigue, 
+de manera diferenciada entre entrenamiento y evaluación:
 
 ```{r}
-table(droplevels(df[!is.na(df['Age']), 'Title']))
-table(droplevels(df[is.na(df['Age']), 'Title']))
+# Entrenamiento
+table(droplevels(df[!is.na(df['Age']) & !is.na(df['Survived']), 'Title']))
+table(droplevels(df[is.na(df['Age']) & !is.na(df['Survived']), 'Title']))
+# Evaluación
+table(droplevels(df[!is.na(df['Age']) & is.na(df['Survived']), 'Title']))
+table(droplevels(df[is.na(df['Age']) & is.na(df['Survived']), 'Title']))
 ```
 
-Como vemos los títulos de aquellos registros sin edad informada son de los más comunes, 
-por lo que parece viable utilizar esta información.
+Como vemos los títulos de aquellos registros sin edad informada son suficientemente comunes como para ser utilizados en la inputación.
+La excepción es el registro con título "Ms" del conjunto de evaluación. 
+Tampoco podemos vincularla al una sola categoría de las más pobladas, 
+si no que [podría pertencer tanto a la categoría "Miss" como "Mrs",](https://en.wikipedia.org/wiki/Ms.)
+por lo que le asignaremos la edad media de la unión de estas categorías.
+Este caso especial lo tratamos aparte, para no tener que hacer una excepción en el tratamiento general.
+Corresponde al `PassengerId` 980,
+como podemos ver a continuación:
 
+```{r}
+df[is.na(df['Age']) & is.na(df['Survived']) & df['Title'] == 'Ms',]
+```
 
+Le asignamos el valor acordado de manera manual:
 
+```{r}
+df[is.na(df['Age']) & is.na(df['Survived']) & df['Title'] == 'Ms', 'Age'] = 
+  mean(df[!is.na(df['Age']) & is.na(df['Survived']) & (df[,'Title'] %in% c("Mrs", "Miss")), 'Age'])
+```
+
+Para inputar los valores definimos la siguiente función, 
+que para cada registro mira a que subconjunto pertenece y le asigna la media de edad en este subconjunto del resto de registros de su mismo título:
+
+```{r}
+InputeAge = function(PassId){
+  ToInpute = mean(
+    df[!is.na(df['Age']) # Filtramos que tengan un valor definido de edad
+       & is.na(df['Survived']) == is.na(df[df['PassengerId']==PassId, 'Survived']) # Seleccionamos subconjunto
+       & df['Title'] ==  as.character(df[df['PassengerId']==PassId, 'Title']), # Filtramos que tengan el mismo título
+       'Age']) # Calculamos la media
+  return(ToInpute)
+}
+df[is.na(df['Age']), 'Age'] = sapply(FUN = InputeAge, X = df[is.na(df['Age']), 'PassengerId'])
+```
+
+### Variable `SibSp`
+
+Finalmente tratamos los dos valores con `SibSp` sin informar debido a que los hemos considerado valores erróneos en el paso previo de detección de valores extremos.
+Los registros a tratar son los siguientes:
+
+```{r}
+df[is.na(df['SibSp']), ]
+```
+
+Como podemos ver cada uno pertenece a un subconjunto.
+Para inputarles valores utilizaremos el algoritmo de los $k$ vecinos más cercanos (implementado en la función `kNN()` de la libraría `VIM`) y los atributos `Pclass`, `Age` y `Parch`.
+La argumentación es que el número de hermanos presente depende de una combinación de la edad
+y la clase del billete (clase social, en realidad).
+Realizamos la inputación asegurándonos de que no hay filtrado de datos de test a entrenamiento:
+
+```{r}
+# Entrenamiento
+train_inputado = VIM::kNN(df[!is.na(df['Survived']), ],
+                          dist_var = c("Pclass", "Age", "Parch"),
+                         variable = 'SibSp')
+df[df['PassengerId']==69, 'SibSp'] = train_inputado[train_inputado['PassengerId']==69, 'SibSp']
+# Evaluación
+test_inputado = VIM::kNN(df[is.na(df['Survived']), ],
+                          dist_var = c("Pclass", "Age", "Parch"),
+                         variable = 'SibSp')
+df[df['PassengerId']==1106, 'SibSp'] = test_inputado[test_inputado['PassengerId']==1106, 'SibSp']
+```
+
+Los valores inputados son los siguentes, en ambos casos cero como vemos:
+
+```{r}
+df[df[,'PassengerId'] %in% c(1106, 96), ]
+```
+
+## Resultado
+
+Vemos como no queda ningún registro no identificado en los datos (más allá de los 418 registros de evaluación sin `Survived`):
+
+```{r}
+summary(df)
+```
